Add product Module

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,18 @@
-version: '3.8'
+version: "3.8"
 
 services:
   dev-db:
+    image: postgres:13
+    ports:
+      - 5432:5432
+
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: vision2030
+      POSTGRES_DB: gideon
+    networks:
+      - contentBlog
+  shopping-db:
     image: postgres:13
     ports:
       - 5432:5432
