--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "prisma:migrate:deploy": "prisma migrate deploy",
     "db:dev:rm": "docker compose rm dev-db -s -f -v",
     "db:dev:up": "docker compose up dev-db -d",
-    "db:dev:restart": "npm run db:dev:rm && npm run db:dev:up && npm run prisma:migrate:deploy",
+    "shopping:dev:rm": "docker compose rm shopping-db -s -f -v",
+    "shopping:dev:up": "docker compose up shopping-db -d",
+    "shopping:dev:restart": "npm run shopping:dev:rm && npm run shopping:dev:up && npm run prisma:migrate:deploy",
     "prisma:test:deploy": "dotenv -e .env.test -- prisma migrate deploy",
     "db:test:rm": "docker compose rm test-db -s -f -v",
     "db:test:up": "docker compose up test-db -d",
@@ -39,7 +41,7 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
-    "@prisma/client": "^5.5.2",
+    "@prisma/client": "^5.6.0",
     "argon2": "^0.31.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
