--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,20 @@
 version: "3.8"
 
 services:
-  dev-db:
+  blogging-db:
     image: postgres:13
+    container_name: my_chat_app
     ports:
-      - 5432:5432
-
+      - "5432:5432"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: vision2030
       POSTGRES_DB: gideon
-    networks:
-      - contentBlog
-  shopping-db:
-    image: postgres:13
-    ports:
-      - 5432:5432
 
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: vision2030
-      POSTGRES_DB: gideon
-    networks:
-      - contentBlog
-  test-db:
-    image: postgres:13
+  redis:
+    image: redis:latest
     ports:
-      - 5435:5432
+      - "6379:6379"
 
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: vision2030
-      POSTGRES_DB: contento
-    networks:
-      - contentBlog
-networks:
-  contentBlog:
+volumes:
+  my_postgres_data:
