--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "shopping:dev:rm": "docker compose rm shopping-db -s -f -v",
     "shopping:dev:up": "docker compose up shopping-db -d",
     "shopping:dev:restart": "npm run shopping:dev:rm && npm run shopping:dev:up && npm run prisma:migrate:deploy",
+    "blogging:dev:rm": "docker compose rm blogging-db -s -f -v",
+    "blogging:dev:up": "docker compose up blogging-db -d",
+    "blogging:dev:restart": "npm run blogging:dev:rm && npm run blogging:dev:up && npm run prisma:migrate:deploy",
     "prisma:test:deploy": "dotenv -e .env.test -- prisma migrate deploy",
     "db:test:rm": "docker compose rm test-db -s -f -v",
     "db:test:up": "docker compose up test-db -d",
@@ -32,33 +35,45 @@
   },
   "dependencies": {
     "@apollo/server": "^4.9.5",
-    "@nestjs/apollo": "^12.0.10",
+    "@nestjs/apollo": "^12.0.11",
+    "@nestjs/class-transformer": "^0.4.0",
+    "@nestjs/class-validator": "^0.13.4",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/graphql": "^12.0.10",
+    "@nestjs/graphql": "^12.0.11",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
     "@prisma/client": "^5.6.0",
+    "apollo-server-express": "^3.13.0",
     "argon2": "^0.31.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
+    "express-session": "^1.17.3",
     "graphql": "^16.8.1",
+    "graphql-upload": "^14.0.0",
     "graphql-yoga": "^5.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "redis": "^4.6.11",
+    "redis-cli": "^2.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.0"
+    "stripe": "^14.5.0",
+    "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.10",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.11",
